<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/PhotoActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/textsizetoolbar" />

    <LinearLayout
        android:id="@+id/TOPButtonsDIV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btnAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/helper1"
            android:text="@string/SizeShow_all"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnIcons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/helper1"
            android:text="@string/SizeShow_icon"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/helper1"
            android:text="@string/SizeShow_medium"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/helper1"
            android:text="@string/SizeShow_large"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SelectDIV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkboxSelectAll"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:paddingLeft="5dp"
            android:text="@string/selectAll" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gv_folder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:scrollbarThumbVertical="@drawable/ic_scrollbar"
        android:scrollbars="vertical" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/helper2"
        android:paddingTop="6dp">

        <Button
            android:id="@+id/btnRestore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:fontFamily="@font/roboto_regular"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/restore_now"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:background="@color/white"
            android:text="@string/delete_now" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="#ee000000" />
</LinearLayout>
